<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.face_chtj.base_iotutils.view.TopTitleBar
        android:id="@+id/ctTopView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:centerText="签名查询"
        app:leftBack="true"
        app:leftText="&lt;&lt;"
        app:rightText=""
        app:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apk_position_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectApkClick"
            android:text="@string/print_sign" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveResultClick"
            android:text="@string/save_result_sign" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="文件保存在/sdcard/sign.txt文件中" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_dialogalert_bg"
        android:textSize="30sp" />

</LinearLayout>